during data entry, removed code being ran when solveTime is blurred; stretched save button to with: 100%

--- a/css/dataEntry.import.less
+++ b/css/dataEntry.import.less
@@ -18,6 +18,10 @@
   }
 }
 
+#save-button {
+  width: 100%;
+}
+
 .results-sidebar-container {
   z-index: 1;
 
